# DataIngestionPySpark

./: .replit  README.md  main.py  pyproject.toml  replit.nix
config/: data_sources.yml  logging_config.yml
schemas/: customer_data.json  sales_transactions.json
src/classifiers/: __init__.py  data_classifier.py
src/connectors/: __init__.py  api_connector.py  base_connector.py  database_connector.py  elasticsearch_connector.py  file_connector.py  hive_connector.py  kafka_connector.py  nvd_connector.py
src/pipeline/: __init__.py  data_ingestion_pipeline.py
src/utils/: __init__.py  config_loader.py  kafka_utils.py  logging_utils.py  schema_registry.py  spark_session.py
web_dashboard/: app.py  main.py
web_dashboard/static/css/: custom.css
web_dashboard/static/js/: dashboard.js  dataflow-animation.js  realtime.js
web_dashboard/templates/: base.html  data_sources.html  index.html  monitoring.html  schema_validation.html
