[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.9.0",
    "email-validator>=2.2.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "kafka-python>=2.1.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pyspark[sql]>=3.5.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "websockets>=15.0.1",
    "elasticsearch>=8.17.2",
    "pyhive>=0.7.0",
    "thrift>=0.21.0",
    "trafilatura>=2.0.0",
]
